force-app/src/objects/cpm__Installment__c.object
<CustomObject>
    <description>Installments are the result of a Recurring Payment. Installments track the status of a invoice or a direct debit transaction.</description>
    <fields>
        <fullName>CTFD__CTC_Bank_Statement_Description__c</fullName>
        <label>CTC Bank Statement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTFD__CTC_Cash_Entry_Error__c</fullName>
        <label>CTC Cash Entry Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTFD__CTC_Cash_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTC Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTFD__CTC_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTC Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTFD__CTC_Sales_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTC Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTFD__CTC_Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTC Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Account_Holder_Name__c</fullName>
        <description>The account holder name from the associated payment profile.</description>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Account_Holder_Name__c ) ) , cpm__Custom_Account_Holder_Name__c , cpm__Payment_Profile__r.cpm__Holder_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The account holder name as stated on the payment profile.</inlineHelpText>
        <label>Account Holder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debitor, copied from Recurring Payment</description>
        <inlineHelpText>The debitor, copied from Recurring Payment</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Amount_Open__c</fullName>
        <label>Amount Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Amount__c</fullName>
        <description>The amount of this transaction. copied from the Recurring Payment.</description>
        <inlineHelpText>The amount of this transaction.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__BIC__c</fullName>
        <description>The BIC (Bank Identifier Code) as stated on the payment profile.</description>
        <formula>IF (
  NOT ( ISBLANK ( cpm__Custom_BIC__c ) ) , cpm__Custom_BIC__c ,
  IF( NOT(ISBLANK(cpm__Payment_Profile__r.cpm__Clearing_Member_Id__c) ), cpm__Payment_Profile__r.cpm__Clearing_Member_Id__c, cpm__Payment_Profile__r.cpm__BIC_Code__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The BIC as stated on the payment profile.</inlineHelpText>
        <label>Account Number Additional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Statement_Description__c</fullName>
        <description>The description provided to the bank or payment provider for use on the bank statement of the debitor. When using a payment provider be sure to always have this field contain the name of the organisation. As this is not otherwise displayed on the bank statement.</description>
        <inlineHelpText>The description provided to the debitor. When using a payment provider be sure to always have this field contain the name of the organisation. As this is not otherwise displayed on the bankstatement.</inlineHelpText>
        <label>Bank Statement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__City__c</fullName>
        <formula>cpm__Payment_Profile__r.cpm__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Collection_Count__c</fullName>
        <description>The number of times this Installment was collected.</description>
        <inlineHelpText>The number of times this Installment was collected.</inlineHelpText>
        <label>Collection Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debitor</description>
        <inlineHelpText>The debitor</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Country__c</fullName>
        <formula>cpm__Payment_Profile__r.cpm__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Account_Holder_Name__c</fullName>
        <label>Custom Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_BIC__c</fullName>
        <label>Custom Account Number Additional</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_IBAN__c</fullName>
        <label>Custom Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Mandate_Date_Signed__c</fullName>
        <label>Custom Mandate Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Mandate_ID__c</fullName>
        <label>Custom Mandate ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Payment_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Populate this field if you want to use another Payment Reference than the one is generated in Salesforce</inlineHelpText>
        <label>Custom Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Sequence_Type__c</fullName>
        <label>Custom Sequence Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Due_Date__c</fullName>
        <description>The Due date for this installment</description>
        <inlineHelpText>The Due date for this installment</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Final_Payment_Reference__c</fullName>
        <description>The payment reference for this installment.</description>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Payment_Reference__c ) ) , cpm__Custom_Payment_Reference__c , IF ( NOT ( ISBLANK ( cpm__Recurring_Payment_Reference__c ) ) , cpm__Recurring_Payment_Reference__c , cpm__Generated_Payment_Reference__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The payment reference for this installment.</inlineHelpText>
        <label>Final Payment Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__GUID__c</fullName>
        <label>GUID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Generated_Payment_Reference__c</fullName>
        <description>The auto generated payment reference.</description>
        <externalId>true</externalId>
        <inlineHelpText>The auto generated payment reference.</inlineHelpText>
        <label>Generated Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Housename_Or_Number__c</fullName>
        <description>House name or number.</description>
        <formula>cpm__Payment_Profile__r.cpm__Housename_Or_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House name or number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN_ISO_Country_Code__c</fullName>
        <description>The ISO Country Code taken from the IBAN.</description>
        <formula>LEFT(cpm__IBAN__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ISO Country Code taken from the IBAN.</inlineHelpText>
        <label>IBAN ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <description>The IBAN as stated on the payment profile.</description>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_IBAN__c ) ) , cpm__Custom_IBAN__c ,
  IF ( cpm__Payment_Profile__r.RecordType.DeveloperName == &apos;IBAN&apos; , cpm__Payment_Profile__r.cpm__IBAN__c ,
    IF ( cpm__Payment_Profile__r.RecordType.DeveloperName == &apos;Credit_Card&apos;,  cpm__Mandate__r.cpm__Reference__c, cpm__Payment_Profile__r.cpm__Bank_Account__c )
  )
)</formula>
        <inlineHelpText>The IBAN as stated on the payment profile.</inlineHelpText>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Cancelled_Date__c</fullName>
        <label>Last Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Collection_Date__c</fullName>
        <description>The last time this installment was collected.</description>
        <inlineHelpText>The last time this installment was collected.</inlineHelpText>
        <label>Last Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Failed_Date__c</fullName>
        <label>Last Failed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Failure_Reason__c</fullName>
        <label>Last Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Paid_Date__c</fullName>
        <label>Last Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Raw_Request__c</fullName>
        <label>Last Raw Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Raw_Response__c</fullName>
        <label>Last Raw Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Last_ReasonCode_Received__c</fullName>
        <description>This field is only used in Finance integration</description>
        <inlineHelpText>Contains the last received Reason Code</inlineHelpText>
        <label>Last ReasonCode Received</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Refunded_Date__c</fullName>
        <label>Last Refunded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Rejection_Date__c</fullName>
        <label>Last Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Reversal_Date__c</fullName>
        <label>Last Reversal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_Date_Signed__c</fullName>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Mandate_Date_Signed__c ) ) , cpm__Custom_Mandate_Date_Signed__c , cpm__Mandate__r.cpm__Date_Signed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_ID__c</fullName>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Mandate_ID__c ) ) , cpm__Custom_Mandate_ID__c , cpm__Mandate__r.cpm__Mandate_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The mandate used to collect this installment.</description>
        <inlineHelpText>The mandate used to collect this installment.</inlineHelpText>
        <label>Mandate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>cpm__Mandate__c.cpm__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>cpm__Mandate__c.cpm__Payment_Profile__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Payment_Profile__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.cpm__Payment_Profile__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>By default only active mandates are shown</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Mandate__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Mandatory_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this Installments is mandatory.</description>
        <inlineHelpText>Checked: This installment is mandatory.</inlineHelpText>
        <label>Mandatory payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Original_Due_Date__c</fullName>
        <description>The orginal due date for this installment.</description>
        <inlineHelpText>The orginal due date for this installment.</inlineHelpText>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Originating_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__PayLinks_Page__c</fullName>
        <label>PayLinks Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Pay_Url__c</fullName>
        <label>Pay Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Intent_Id__c</fullName>
        <externalId>true</externalId>
        <label>Payment Intent Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Journey</label>
        <referenceTo>cpm__Payment_Journey__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Adyen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The associated Payment Profile for this installment.</description>
        <inlineHelpText>The associated Payment Profile for this installment.</inlineHelpText>
        <label>Payment Profile</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.cpm__Contact__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.cpm__Account__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>By default only active records are shown.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_QR__c</fullName>
        <label>Payment QR</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Payment_Schedule__c</description>
        <label>Payment Schedule</label>
        <referenceTo>cpm__Payment_Schedule__c</referenceTo>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Transaction_Id__c</fullName>
        <description>Populated from payment provider integrations</description>
        <label>Payment Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__ProcessingHub_Id__c</fullName>
        <externalId>true</externalId>
        <label>ProcessingHub Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processor__c</fullName>
        <description>StepOrange Payment Processor</description>
        <label>Processor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Pay_Url__c</fullName>
        <label>Recurring Pay Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Payment_QR__c</fullName>
        <label>Recurring Payment QR</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Payment_Reference__c</fullName>
        <description>The payment reference from recurring.</description>
        <externalId>true</externalId>
        <inlineHelpText>The payment reference from recurring.</inlineHelpText>
        <label>Recurring Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent recurring payment.</description>
        <inlineHelpText>The parent recurring payment.</inlineHelpText>
        <label>Recurring Payment</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>cpm__Recurring_Payment__c.cpm__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>cpm__Recurring_Payment__c.cpm__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>cpm__Recurring_Payment__c.cpm__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Recurring_Payment__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Relates_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relates To</label>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Payable Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Sequence_Type__c</fullName>
        <description>Is this Direct Debit a First or Recurring.</description>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Sequence_Type__c ) ) , cpm__Custom_Sequence_Type__c , IF (  cpm__Mandate__r.cpm__Use_Last_on_next_run__c , &quot;FNAL&quot;, IF (  cpm__Mandate__r.cpm__Use_First_on_next_run__c , &quot;FRST&quot;,
IF ( AND ( ISPICKVAL ( cpm__Mandate__r.cpm__Type__c, &apos;Recurring&apos;)   , NOT(ISBLANK(cpm__Mandate__r.cpm__Last_Used__c)) ) , &quot;RCUR&quot; ,
IF ( OR ( ISPICKVAL( cpm__Mandate__r.cpm__Type__c, &apos;One-Off&apos;) , ISPICKVAL(cpm__Mandate__r.cpm__Type__c, &apos;Eenmalig&apos;) ) , &quot;OOFF&quot; , &quot;FRST&quot; ) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this Direct Debit a First or Recurring.</inlineHelpText>
        <label>Sequence Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Status_Reason__c</fullName>
        <description>Why this installment has it&apos;s current status.</description>
        <inlineHelpText>Why this installment has it&apos;s current status.</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>The status of this Installment.</description>
        <inlineHelpText>The status of this Installment.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collected</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                    <default>true</default>
                    <label>Outstanding</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Pending recollection</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Partially paid</fullName>
                </value>
                <value>
                    <fullName>Pending Processing</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Street__c</fullName>
        <formula>cpm__Payment_Profile__r.cpm__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Council of International Schools</fullName>
                </value>
                <value>
                    <fullName>Main</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Transaction_Sub_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Sub Element</label>
        <referenceTo>cpm__Transaction_Sub_Element__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Wallet_Type__c</fullName>
        <description>The wallet type from the associated payment profile.</description>
        <formula>TEXT(cpm__Payment_Profile__r.cpm__Wallet_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The wallet type from the associated payment profile.</inlineHelpText>
        <label>Wallet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__WebhookURL__c</fullName>
        <label>Webhook Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Zipcode__c</fullName>
        <formula>cpm__Payment_Profile__r.cpm__Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__of_times_cancelled__c</fullName>
        <label># of times cancelled</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__of_times_failed__c</fullName>
        <label># of times failed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__of_times_paid__c</fullName>
        <description>The number of times this transaction was paid.</description>
        <inlineHelpText>The number of times this transaction was paid.</inlineHelpText>
        <label># of times paid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__of_times_refunded__c</fullName>
        <label># of times refunded</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__of_times_rejected__c</fullName>
        <label># of times rejected</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__of_times_reversed__c</fullName>
        <description>The number of times this transaction was reversed.</description>
        <inlineHelpText>The number of times this transaction was reversed.</inlineHelpText>
        <label># of times reversed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proh__File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentHub File</label>
        <referenceTo>proh__File__c</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Installment</label>
    <listViews>
        <fullName>Collected_Installments_Currency_Issue</fullName>
        <columns>NAME</columns>
        <columns>cpm__Account__c</columns>
        <columns>cpm__Amount__c</columns>
        <columns>cpm__Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CTFD__CTC_Sales_Invoice__c</columns>
        <columns>CTFD__CTC_Cash_Entry__c</columns>
        <columns>CTFD__CTC_Matched__c</columns>
        <columns>CTFD__CTC_Cash_Entry_Error__c</columns>
        <columns>CTFD__CTC_Sales_Credit_Note__c</columns>
        <columns>cpm__Payment_Processor__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>cpm__Installment__c.cpm__Receivable</value>
        </filters>
        <filters>
            <field>cpm__Status__c</field>
            <operation>equals</operation>
            <value>Collected</value>
        </filters>
        <filters>
            <field>CTFD__CTC_Matched__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Collected Installments Currency Issue</label>
    </listViews>
    <listViews>
        <fullName>Collected_Matched_Installments</fullName>
        <columns>NAME</columns>
        <columns>cpm__Account__c</columns>
        <columns>cpm__Amount__c</columns>
        <columns>cpm__Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CTFD__CTC_Sales_Invoice__c</columns>
        <columns>CTFD__CTC_Cash_Entry__c</columns>
        <columns>CTFD__CTC_Matched__c</columns>
        <columns>CTFD__CTC_Cash_Entry_Error__c</columns>
        <columns>CTFD__CTC_Sales_Credit_Note__c</columns>
        <columns>cpm__Payment_Processor__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>cpm__Installment__c.cpm__Receivable</value>
        </filters>
        <filters>
            <field>cpm__Status__c</field>
            <operation>equals</operation>
            <value>Collected</value>
        </filters>
        <filters>
            <field>CTFD__CTC_Matched__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Collected &amp; Matched Installments</label>
    </listViews>
</CustomObject>